# Furion_C_GPU

./: CMakeLists.txt  cpp.hint  run.bat
src/: CMakeLists.txt  Furion.cu  Furion.h  main.cu
src/display/: furion_plot_sigma.cu  furion_plot_sigma.h
src/help/: 20220701  readme
src/optical_element/: furion_angle_vector.cu  furion_angle_vector.h  furion_reflect_vector.cu  furion_reflect_vector.h  furion_rotx.cu  furion_rotx.h  furion_rotz.cu  furion_rotz.h  furion_vector_angle.cu  furion_vector_angle.h  g_Furion_cylinder_ellipse_Mirror.cu  g_Furion_cylinder_ellipse_Mirror.h  g_beam.cu  g_beam.h  g_cylinder_ellipse.cu  g_cylinder_ellipse.h  g_oe.cu  g_oe.h  g_source.cu  g_source.h  grating.cu  grating.h
src/python_plot/: Furion_plot4_6sigma.py
src/surface/: no_surfe.cu  no_surfe.h
